--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Simple Page</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my simple HTML page.</p>
+    <h1>Mohammed Aneeq</h1>
 </body>
 </html>
